2025-11-27T00:43:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19721560651 # 1330
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
* notice: last 14d: unq all: 12 23
* notice: prev accum: outdated-unq outdated-all / unq all: 1279 6067 / 1292 6092
* notice: next accum: outdated-unq outdated-all / unq all: 1281 6070 / 1293 6093
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-11-12] / [2025-11-26]

2025-11-26T12:19:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19703454975 # 1329
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
* notice: last 14d: unq all: 13 25
* notice: prev accum: outdated-unq outdated-all / unq all: 1279 6067 / 1291 6091
* notice: next accum: outdated-unq outdated-all / unq all: 1279 6067 / 1292 6092
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-26]

2025-11-26T00:44:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19688671840 # 1328
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
* notice: last 14d: unq all: 12 24
* notice: prev accum: outdated-unq outdated-all / unq all: 1277 6061 / 1291 6091
* notice: next accum: outdated-unq outdated-all / unq all: 1279 6067 / 1291 6091
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-11] / []

2025-11-24T00:47:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19620005912 # 1324