@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-27T00:43:30Z",
-  "count_outdated" : 6070,
-  "uniques_outdated" : 1281,
-  "count" : 6093,
-  "uniques" : 1293,
+  "timestamp" : "2025-11-28T00:42:50Z",
+  "count_outdated" : 6071,
+  "uniques_outdated" : 1282,
+  "count" : 6101,
+  "uniques" : 1294,
   "views" : [
-    {
-      "timestamp": "2025-11-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-14T00:00:00Z",
       "count": 6,
@@ -85,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-11-27T00:00:00Z",
+      "count": 8,
+      "count_minmax": [ 8, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
