@@ -1,12 +1,7 @@
 {
-  "count": 23,
+  "count": 30,
   "uniques": 12,
   "views": [
-    {
-      "timestamp": "2025-11-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-11-14T00:00:00Z",
       "count": 6,
@@ -46,6 +41,11 @@
       "timestamp": "2025-11-26T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-11-27T00:00:00Z",
+      "count": 8,
+      "uniques": 1
     }
   ]
 }
