@@ -1,3 +1,12 @@
+2025-11-28T00:42:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19750866591 # 1332
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
+* notice: last 14d: unq all: 12 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 1281 6070 / 1293 6093
+* notice: next accum: outdated-unq outdated-all / unq all: 1282 6071 / 1294 6101
+* notice: prev exec diff / last date diff / accum: unq all: +1 +8 -0 -0 / +1 +8 -0 -0 / 1 8
+* notice: removed / changed dates: [2025-11-13] / [2025-11-27]
+
 2025-11-27T00:43:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19721560651 # 1330
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
